Adding frontend, rewrite and move some parts